[gd_scene load_steps=2 format=3 uid="uid://dxfiqmf0klgxg"]

[ext_resource type="Script" path="res://network_manager/network_manager.gd" id="1_xb7fr"]

[node name="NetworkManager" type="Node"]
script = ExtResource("1_xb7fr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 185.0
offset_bottom = 128.0
alignment = 1

[node name="join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
